--- a/videoUI/src/components/homepage/main.module.scss
+++ b/videoUI/src/components/homepage/main.module.scss
@@ -1,2 +1,2 @@
-@use '../globalSass/variables';
-@use './styles/createaccount.module.scss';
+//@use '../globalSass/variables';
+//@use './styles/createaccount.module.scss';
