--- a/videoUI/src/globalStyles.scss
+++ b/videoUI/src/globalStyles.scss
@@ -1,7 +1,7 @@
+@use './components/globalSass/app' as *;
 *, body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: $primary-color;
 }
-
-$primary-color: orange;
