--- a/videoUI/src/components/globalSass/components/_variables.scss
+++ b/videoUI/src/components/globalSass/components/_variables.scss
@@ -1,2 +1,3 @@
-$primary-color : whitesmoke;
-$secondary-color : #0066ff;
+$primary-color : #f5f5f5;
+$secondary-color : #003c96;
+$third-color : #343a40;
