--- a/videoUI/src/components/videochatpage/dashboard/profilepicture.module.scss
+++ b/videoUI/src/components/videochatpage/dashboard/profilepicture.module.scss
@@ -1,38 +1,28 @@
 @use '../../globalSass/app' as *;
-.yeahmon{
-    display: flex;
-    flex-direction: column;
-}
+
 
 .container{
-    &__column{
-        border: solid red;
-        padding: 0 0 0 2rem;
-        width: 20%;
-    }
-    &__image{
-        background-color: whitesmoke;
-        //margin: 0 0 0 0.5rem;
-        padding: 2rem;
-        position: relative;
-        box-shadow: 0 0 2px 0 gray;
-    }
     &__icon{
-
+        padding: 1rem;
+        position: absolute;
+        bottom: 0;
+        left: 35%;
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $primary-color;
     }
 }
 .icon{
-    color: $secondary-color;
-    font-size: 2rem;
-    position: absolute;
-    bottom: 9%;
-    left: 40%;
-    opacity: 0.75;
+    color: $primary-color;
+    font-size: 1.5rem;
     //box-shadow: 0 0 3px 0 gray;
 &:hover{
+    font-size: 1.75rem;
     opacity: 1;
-    font-size: 2.5rem;
-    color: #0c68f1;
+    color: $third-color;
 }
 }
-
