--- a/videoUI/src/components/videochatpage/videochat.module.scss
+++ b/videoUI/src/components/videochatpage/videochat.module.scss
@@ -5,6 +5,33 @@
     }
 
 .container{
+    &__tabpane{
+        &__column__search{
+            padding: 0 !important;
+            z-index: 5 !important;
+            height: 99vh;
+            //background-color: lighten($third-color, 5%);
+            background-color: whitesmoke;
+        }
+    }
+}
+
+.container{
+    &__column__ui{
+    }
+
+&__column__userbar{
+    background-color: lighten($third-color, 5%) !important;
+}
+&__tabpane{
+    &__search{
+        width: 100%;
+        margin: 0 !important;
+        padding: 0 !important;
+        background-color: lighten($third-color, 5%);
+    }
+}
+
     &__document{
         overflow-x: hidden;
     }
@@ -26,7 +53,6 @@
     }
 }
 &__tabcontent{
-    height: 100%;
     width:100%;
 }
     &__first{
@@ -38,9 +64,10 @@
         transition: all ease-in-out 0.5s;
     }
     &__tabpane{
+        flex-direction: row;
         overflow-x: hidden;
         height: 100%;
-        width: 100%;
+        width: 99%;
         margin: 0rem !important;
         padding: 0 !important;
         background-color: $third-color;
