--- a/videoUI/src/components/videochatpage/searchbar/searchbar.module.scss
+++ b/videoUI/src/components/videochatpage/searchbar/searchbar.module.scss
@@ -2,59 +2,89 @@
 
 .images{
 max-width: 100%;
-height: auto;
+height: 5rem;
 border-radius: 0.5rem;
-flex-grow: 1;
 display: flex;
 }
 .button{
-    background-color: $third-color;
+    background-color: lighten($third-color, 1%);
     color: $primary-color ;
     border: none ;
-    box-shadow: 0 0 3px 0 whitesmoke;
-    margin: 0.5rem 0 0.5rem 0;
+    box-shadow: 0 0 3px 0 $fourth-color;
+    margin: 0.25rem 0 0.25rem 0;
     font-weight: 700;
+    padding: 0.15rem;
     width: 5rem;
-    border-radius: 2.75rem ;
+    border-radius: 0.5rem;
 &:hover{
-    background-color: lighten($third-color, 20%) ;
-    color: $primary-color;
+    background-color: lighten($fourth-color, 0%) ;
+    color: lighten($third-color, 5%);
 }
+}
+.profile{
+    &__text{
+        font-size:0.75rem;
+        color: $primary-color;
+        margin: 0 0.5rem 0 0;
+    }
+    &__bio{
+        color: $fourth-color;
+        font-weight: 400;
+        font-size: 0.75rem;
+    }
 }
 
 .container{
     &__userprofile{
+        padding: 2rem 1rem 2rem 1rem !important;
         display: flex;
         align-items: center;
+        flex-direction: column;
+        margin: 1.5rem 1rem 2rem 1rem;
         justify-content: space-between;
-        background-color: lighten($third-color, 5%);
+        background-color: lighten($third-color, 10%);
         border-radius: 0.5rem;
-        border: solid whitesmoke 0.5px;
-        height: 6rem;
+        border: solid $fourth-color 2px;
+        box-shadow: 0px 0px 5px 0px darken($fourth-color, 5%);
     &:nth-child(n-1){
 
     }
     }
+    &__date{
+        justify-content: center;
+        display: flex;
+        align-items: center;
+    }
     &__image{
         display: flex;
         justify-content: center;
-        align-items: center;
         flex-direction: column;
+        align-items: center;
     }
-    &__username{
+    &__button{
+        padding: 0.5rem 0 0.5rem 0;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         color: $primary-color;
         font-size: 1rem;
-        padding: 0.5rem;
+        margin: 0.5rem 0 0.5rem 0;
     }
     &__text{
-        padding: 0.5rem;
+        margin: 0.5rem 0 0.5rem 0;
+        color: $primary-color;
         font-size: 0.75rem;
+        display: flex;
+        justify-content: center;
         text-transform: uppercase;
         color: $primary-color;
+    }
+    &__bio{
+        display: flex;
+        justify-content: center !important;
+        margin: 0.5rem 0 0.5rem 0;
+
     }
 }
 .container{
