--- a/videoUI/src/components/videochatpage/videochat.module.scss
+++ b/videoUI/src/components/videochatpage/videochat.module.scss
@@ -5,13 +5,15 @@
     }
 
 .container{
+    &__row{
+    }
     &__tabpane{
         &__column__search{
             padding: 0 !important;
             z-index: 5 !important;
             height: 99vh;
             //background-color: lighten($third-color, 5%);
-            background-color: whitesmoke;
+            background-color: lighten($third-color, 5%);
         }
     }
 }
@@ -29,6 +31,9 @@
         margin: 0 !important;
         padding: 0 !important;
         background-color: lighten($third-color, 5%);
+    }
+    &__notifications{
+        height: 100vh;
     }
 }
 
@@ -56,7 +61,6 @@
     width:100%;
 }
     &__first{
-        
                 height: 99vh;
         background-color: $third-color;
         padding: 0rem 0.5rem 0rem 1.5rem !important;
