--- a/videoUI/src/components/videochatpage/dashboard/listgroup.module.scss
+++ b/videoUI/src/components/videochatpage/dashboard/listgroup.module.scss
@@ -5,12 +5,13 @@
 
 
 &__list{
+    margin: 0 0 0 0rem;
     display: flex;
     justify-content: center;
     width: 100%;
     &.toggled > a{
         align-items: center;
-        background-color: $third-color;
+        //background-color: $fourth-color;
         border: none;
         padding-left:2rem;
     }
@@ -21,10 +22,12 @@
     &.one{
         background-color: $primary-color !important;
         color: $third-color;
-        border: solid white;
-        box-shadow: 0 0 px 0 $primary-color;
+        border-radius: 0.75rem;
+        border: none !important;
+        box-shadow: 0 0 1px 0 $primary-color;
     }
         &:hover{
+            border-radius: 1rem;
         background-color: darken($primary-color, 15%);
         color: $third-color;
     }
