--- a/videoUI/src/components/videochatpage/notifications/requestnotification.module.scss
+++ b/videoUI/src/components/videochatpage/notifications/requestnotification.module.scss
@@ -4,86 +4,53 @@
     position: absolute;
     bottom: 2%;
     right: 0;
-    opacity: 0.25;
+    opacity: 0.35;
     z-index: 1;
 }
-.request{
-    &__text{
-    color: $primary-color;
-      font-weight: 600;
+
+
+.container{
+    background-color: lighten($third-color, 4%);
+    height: 100vh;
+    overflow-y: scroll;
+&__list{
+    z-index: 50;
+    //border:solid lighten($third-color,25%);
+    border-radius: 0 0 0.25rem 0.25rem;
+    //box-shadow: 0 0 3px 0 $third-color;
+}
+}
+.notification{
+
+    &__list{
+    }
+    &__row{
     }
     &__header{
-        font-size: 1rem;  
-        color: $fourth-color;
+        //border: solid lighten($third-color,25%);
+        border-radius: 0.25rem 0.25rem 0 0;
+        box-shadow: 0 0 3px 0 $third-color;
+        background-color: lighten($third-color, 2%);
+    &__container{
+        display: flex;
+        padding: 0.5rem 0 0 1rem;
+        align-items: center;
     }
-    &__date{
-        color: $fourth-color;
-        font-size: 0.75rem;
-        margin: 0.5rem 0 0 0;
-        font-weight: 400;
     }
 }
-
-.mycolumn{
-    border-radius: 0.25rem;
-    box-shadow:1px 0px 3px 1px  lighten($third-color, 50%);
-    height: auto;
-    z-index: 50;
-    display: flex;
-    margin: 0.5rem 0rem 0rem 0rem; 
-    align-items: center;
-    border: solid $fourth-color 1px;
-    //background-color: lighten($third-color, 1%)!important;
-    width: 80%;
-    box-sizing: border-box;
-&:first-child{
-    margin-top: 1rem;
-}}
-.container{
-    padding: 1rem;
-    background-color: lighten($third-color, 5%);
-    z-index: 50;
-    position: relative;
-    height: 100vh;
-&__image{
-    display: flex;
-    padding: 0.5rem;
-}
-
-}
-
-
-
-.notification{
-&__header{
-    box-shadow: 0 0 2px 0 $fourth-color;
-    border: solid $fourth-color 1px;
-    border-radius: 0.25rem;
-    padding: 1.25rem 0 1.25rem 0;
-    //margin: 0.25rem 0 0.25rem 0;
-    display: flex;
-    justify-content: space-between;
-    background-color: lighten($third-color, 8%) !important;
-}
-&__image{
-    height: 6rem;
-    clip-path: circle(40%);
-    max-width: 100%;
-}
-&__text{
-    color: $primary-color;
-}
-
-}
-.icon{
-    margin: 1rem 2rem 0 2rem;
-    color: $fourth-color;
-    font-size: 2rem;
-}
-.page__header{
-    font-size: 1.5rem;
+.page{
+    &__header{
+    font-size: 1.75rem;
+    letter-spacing: 2px;
     text-transform: capitalize;
-    margin: 0.5rem;
-    padding: 0 0 0 2rem;
+    margin: 0.5rem 0 0.5rem 0;
+    padding: 1rem 0 1rem 0;
+    font-weight: 700;
     color: $fourth-color;
+    }
+&__icon{
+    margin: 0 0.25rem 0 1.25rem;
+    font-size: 2rem;
+    color: $fourth-color;
+}
 }
