--- a/videoUI/src/components/videochatpage/searchbar/searchbar.module.scss
+++ b/videoUI/src/components/videochatpage/searchbar/searchbar.module.scss
@@ -6,13 +6,12 @@
         z-index: 50 !important;
     }
     &__row__profile{
-        
-        height: 100%;
-        overflow-y: scroll;
-        margin: 0 0 0rem 0;
-        padding:5rem 0 5rem 0;
-        width: 100%;
-    }
+        overflow-y: hidden;
+        overflow-x: hidden;
+        //@at-root: scroll;
+        //margin: 0 0 0rem 0;
+        //padding:5rem 0 5rem 0;
+        }
     &__friendslist{
         position: relative;
         height: 2rem;
@@ -89,9 +88,6 @@
     }
 
     &__searchbar{
-        height: 99vh;
-        overflow-x: hidden;
-        overflow-y: hidden;
         //box-shadow: 0 0 3px 0 $primary-color;    
             &__icon{
                 box-shadow: 1px 0px 1px 0 $third-color;
