--- a/videoUI/src/components/videochatpage/videochat.module.scss
+++ b/videoUI/src/components/videochatpage/videochat.module.scss
@@ -5,41 +5,47 @@
     }
 
 .container{
+    &__columnaz{
+        padding: 0 !important;
+        margin: 0 !important;
+    }
     &__row{
     }
-    &__tabpane{
-        &__column__search{
-            padding: 0 !important;
-            z-index: 5 !important;
-            height: 99vh;
-            //background-color: lighten($third-color, 5%);
-            background-color: lighten($third-color, 5%);
-        }
-    }
-}
+  &__alltabs{
+      border: solid green !important; 
+  }
 
-.container{
-    &__column__ui{
+    &__first{
+        height: 100vh;
+        flex-direction: column;
+        padding: 0 !important;
+        margin: 0 !important;
+        //border: solid yellow !important;
     }
 
 &__column__userbar{
+    //border: solid orange !important;
     background-color: lighten($third-color, 5%) !important;
 }
 &__tabpane{
     &__search{
-        width: 100%;
-        margin: 0 !important;
-        padding: 0 !important;
-        background-color: lighten($third-color, 5%);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='111' height='111' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23212121' %3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='1'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");        
+        overflow-y: scroll;
+        overflow-x: hidden;
+        background-color: darken($third-color, 1%);
+        height: 100vh;
     }
     &__notifications{
+        overflow-y: hidden;
+    height: 100vh;
+    }
+    &__friends{
         height: 100vh;
+        overflow-y: scroll;
+        background-color: lighten($third-color, 0%);
     }
 }
 
-    &__document{
-        overflow-x: hidden;
-    }
     &__image{
         background-color: $third-color;
         margin: 1rem 0 1rem 0rem;
@@ -49,37 +55,22 @@
         flex-direction: column;
         align-items: center;
     }
-    &__column{
-    &__tabcontent{
-        margin: 0 !important;
-        width: 100%;
-        padding: 0 !important;
-        box-sizing: border-box;
-    }
-}
-&__tabcontent{
-    width:100%;
-}
+
     &__first{
-                height: 99vh;
+        padding: 0 !important;
+        margin: 0 !important;
+        height: 100vh;
         background-color: $third-color;
-        padding: 0rem 0.5rem 0rem 1.5rem !important;
-        border-right: solid whitesmoke 3px;
+        //padding: 0rem !important;
+        //border-right: solid whitesmoke 3px;
         transition: all ease-in-out 0.5s;
     }
     &__tabpane{
         flex-direction: row;
-        overflow-x: hidden;
         height: 100%;
-        width: 99%;
         margin: 0rem !important;
         padding: 0 !important;
         background-color: $third-color;
-    }
-    &__columnaz{
-        padding: 0rem !important;
-        display: flex;
-
     }
  
 }
