--- a/videoUI/src/components/videochatpage/dashboard/listgroup.module.scss
+++ b/videoUI/src/components/videochatpage/dashboard/listgroup.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    //border: solid red !important;
     &.toggled > a{
         align-items: center;
         //background-color: $fourth-color;
@@ -22,14 +23,15 @@
     &.one{
         background-color: $primary-color !important;
         color: $third-color;
-        border-radius: 0.75rem;
-        border: none !important;
+        border-radius: 0.35rem !important;
+        border: solid red !important;
         box-shadow: 0 0 1px 0 $primary-color;
     }
         &:hover{
-            border-radius: 1rem;
+            border-radius: 0.45rem;
         background-color: darken($primary-color, 15%);
         color: $third-color;
+        border: none !important;
     }
     
     }
