--- a/videoUI/src/components/videochatpage/videochat.module.scss
+++ b/videoUI/src/components/videochatpage/videochat.module.scss
@@ -3,7 +3,25 @@
     display: flex;
     flex-direction: column;
     }
-
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: $primary-color;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: lighten($third-color, 20%);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 .container{
     &__columnaz{
         padding: 0 !important;
