--- a/videoUI/src/components/videochatpage/notifications/displayprofile.module.scss
+++ b/videoUI/src/components/videochatpage/notifications/displayprofile.module.scss
@@ -1,27 +1,31 @@
 @use '../../globalSass/app' as *;
 
 .mycolumn{
-    //border-radius: 0.25rem 0.25rem 0 0;
     background-color: lighten($third-color, 4%);
-    //box-shadow:0px 0px 3px 0px  lighten($third-color, 5%);
     height: auto;
     display: flex;
     padding: 0.5rem 0 0.5rem 0;
     border-radius: 0.25rem;
     margin: 0.15rem;
     align-items: center;
-    //border-bottom: solid lighten($primary-color,5%);
-    //border-width: 2rem;
-    //box-shadow: 0 0 3px 0 $third-color;
-    //background-color: lighten($third-color, 1%)!important;
-    //width: 80%;
+
     box-sizing: border-box;
     &:hover{
         transition: all ease-in-out 0.15s;
         border: solid $fourth-color 2px;
         border-radius: 0.25rem;
-        //box-shadow: 0 0 35px 0 $third-color;
         background-color: lighten($third-color, 10%);
+    }
+}
+.status{
+    &__online{
+        position: absolute;
+        top: -2rem;
+        //left: 0;
+        padding: 0.15rem;
+        text-transform: uppercase;
+        font-size: 0.65rem;
+        margin: 0 0 0.25rem 1rem;
     }
 }
 .testingaa{
@@ -40,6 +44,30 @@
         border: none !important;
         outline: none !important;
         box-shadow: none !important;
+    }
+  
+    }
+    &__username{
+        background-color: $third-color;
+        border-radius: 0.35rem;
+        color: $fourth-color;
+        font-size: 0.75rem;
+        padding: 0.25rem;
+        text-align: center;
+        position: relative;
+    }
+    &__online{
+        transition: all ease-in-out 1s !important;
+        position: absolute;
+        top: -0.5rem;
+        box-shadow: 0 0 3px 0 $primary-color;
+        border-radius: 50%;
+        right: -0.25rem;
+        background-color: red;
+        height: 1rem;
+        width: 1rem;
+    &.toggled{
+        background-color: #009719 !important;
     }
     }
 }
@@ -68,7 +96,8 @@
 }
 .notification{
     &__image{
-        height: 6rem;
+        margin: 0.25rem 0 0.25rem 0;
+        height: auto;
         clip-path: circle(40%);
         max-width: 100%;
     }
@@ -82,9 +111,15 @@
     margin: 0.5rem 0 0.5rem 0;
 }
 
-
-
 .request{
+    &__status{
+        position: absolute;
+        top: 0;
+        color: green;
+        width: 1rem;
+        height: 1rem;
+        right: 0;
+    }
     &__text{
     color: $primary-color;
       font-weight: 600;
@@ -94,9 +129,13 @@
         color: $fourth-color;
     }
     &__date{
+        background-color: $third-color;
+        padding: 0.5rem;
+        border-radius: 0.25rem;
+
         color: $fourth-color;
-        font-size: 0.75rem;
-        margin: 0.5rem 0 0 0;
+        font-size: 0.65rem;
+        margin: 0.75rem 0 0 0;
         font-weight: 400;
     }
 }
