--- a/videoUI/src/components/videochatpage/utilities/videobutton.module.scss
+++ b/videoUI/src/components/videochatpage/utilities/videobutton.module.scss
@@ -35,6 +35,6 @@
         //background-color: lighten($third-color, 5%);
         align-items: center;
         justify-content: center !important;
-        //border: solid green !important;
+        border: solid green !important;
     }
 }
