updated full stack

--- a/videoUI/src/components/globalSass/components/_variables.scss
+++ b/videoUI/src/components/globalSass/components/_variables.scss
@@ -2,4 +2,5 @@ $primary-color : #f5f5f5;
 $secondary-color : #003c96;
 $third-color : #272727;
 $fourth-color: #f8ffb6;
+$fifth-color: #5a5a5a;
 $fifth-color: darken($third-color, 5%);
